Updated Tinker sync to use locations for program feed block

--- a/tinker/sync/templates/sync.html
+++ b/tinker/sync/templates/sync.html
@@ -42,4 +42,11 @@
     <li>{{ response }}</li>
 {% endfor %}
 </ul>
+
+<h4>Locations</h4>
+<ul>
+{% for response in locations %}
+    <li>{{ response }}</li>
+{% endfor %}
+</ul>
 {% endblock %}
