dog-typing gif added

--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -24,7 +24,7 @@
           Take a short break in your day and enjoy this GIF!
         </p>
         <p>
-          <img src="//cdn1.bethel.edu/gif/dogs-tug-of-war.gif" />
+          <img src="//cdn1.bethel.edu/gif/dog-typing.gif" />
         </p>
 
     </div>
