--- a/tinker/publish/templates/publish-home.html
+++ b/tinker/publish/templates/publish-home.html
@@ -10,6 +10,9 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
+<h3>Here are the automated publishers</h3>
+<a href='/publish-manager/program-feeds' class="button">Program Feeds</a>
+
 <p>Blocks that are published publish out each page in the relationships tab.</p>
 <p>Use *'s to assist in broadening searches. For example, "ban*" will search for "ban", "banner", "bank", etc.</p>
 
@@ -90,7 +93,7 @@ var delay = (function(){
 
   function loadTableForSearch(name_value, content_value, metadata_value){
     var search = {'name': name_value, 'content': content_value, 'metadata': metadata_value};
-    var url = "/publish/search";
+    var url = "/publish-manager/search";
      $.post(url, search, function(data) {
         updateTable(data);
       });
@@ -107,7 +110,7 @@ var delay = (function(){
 
   function publishAsset(type, id, counter){
       var destination = $('input[name=publish-to]:checked', '#publish-search-form').val();
-      var url = "/publish/publish/" + destination + "/" + type + "/" + id;
+      var url = "/publish-manager/publish/" + destination + "/" + type + "/" + id;
      $.post(url, function(data) {
          $("#publish_button_" + counter).text(data);
       });
@@ -115,7 +118,7 @@ var delay = (function(){
 
     function moreInfo(type, id){
          var input_data = {'type': type, 'id': id};
-         var url = "/publish/more_info";
+         var url = "/publish-manager/more_info";
          $.post(url, input_data, function(data) {
              $('.dialog-text').html(data);
           });
