--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -47,7 +47,7 @@
          {% endif %}
 
         {% if session['username'] and ('celanna' in session['username'] or 'ces55739' in session['username']) %}
-             {% if '/publish-manager' in request.path %}
+             {% if '/publish-manager/' in request.path %}
                <li><a href="/publish-manager" class="button button-nav active">Publisher</a></li>
              {% else %}
                  <li><a href="/publish-manager" class="button button-nav">Publisher</a></li>
