--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -15,7 +15,7 @@
          {% endif %}
 
          {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
-             {% if '/faculty-bio/' in request.path %}
+             {% if '/faculty-bio' in request.path %}
                <li><a href="/faculty-bio" class="button button-nav active">Faculty Bios</a></li>
              {% else %}
                  <li><a href="/faculty-bio" class="button button-nav">Faculty Bios</a></li>
@@ -47,7 +47,7 @@
          {% endif %}
 
         {% if session['username'] and ('celanna' in session['username'] or 'ces55739' in session['username']) %}
-             {% if '/publish-manager/' in request.path %}
+             {% if '/publish-manager' in request.path %}
                <li><a href="/publish-manager" class="button button-nav active">Publisher</a></li>
              {% else %}
                  <li><a href="/publish-manager" class="button button-nav">Publisher</a></li>
