Added email to confirmation page

--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -16,7 +16,7 @@
 
         <p>You'll receive an email when your event has been approved by Conference and Event Services. Once your event has been approved, it will appear on your Tinker <a href="/event">events page</a> where you'll be able to view the event page or make changes to it.</p>
 
-        <p>If you have any questions, please contact Conference and Event Services at 651.638.6090.</p>
+        <p>If you have any questions, please contact Conference and Event Services at conference-event@bethel.edu or 651.638.6090.</p>
 
         <p><a href="https://www.bethel.edu/events/calendar/" class="small button">Back to Calendar</a></p>
 
