Quick fix to the publish destinations

--- a/tinker/publish/templates/publish-home.html
+++ b/tinker/publish/templates/publish-home.html
@@ -47,8 +47,7 @@
       <label>Publish to:
           <br />
         <input type="radio" name="publish-to" value="staging" checked> Staging<br />
-        <input type="radio" name="publish-to" value="production"> Production<br />
-        <input type="radio" name="publish-to" value="all"> All<br />
+        <input type="radio" name="publish-to" value="production"> Production and Staging
       </label>
     </div>
 
