added nav, only for me

--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -38,6 +38,14 @@
          {% endif %}
       {% endif %}
 
+        {% if session['username'] and 'ces55739' in session['username'] %}
+             {% if '/e-announcement' in request.path %}
+               <li><a href="/e-announcement" class="button button-nav active">E-Announcements</a></li>
+             {% else %}
+                 <li><a href="/e-announcement" class="button button-nav">E-Announcements</a></li>
+             {% endif %}
+         {% endif %}
+
         {% if session['username'] and ('celanna' in session['username'] or 'ces55739' in session['username']) %}
              {% if '/sync' in request.path %}
                <li><a href="/sync" class="button button-nav active">Sync Metadata</a></li>
