added dates back into the home page view

--- a/tinker/e_announcements/templates/e-announcements-home.html
+++ b/tinker/e_announcements/templates/e-announcements-home.html
@@ -32,9 +32,9 @@
               {{ form.title }}
             {% endif %}
             <br/>
-            <small>
-                <p>{{ form.dates | safe}}</p>
-            </small>
+            <small>{{ form.first_date | safe}}</small>
+            <br/>
+            <small>{{ form.second_date | safe}}</small>
           </p>
         </div>
         <div class="large-6 columns small-3">
