--- a/tinker/e_announcements/templates/e-announcements-home.html
+++ b/tinker/e_announcements/templates/e-announcements-home.html
@@ -13,7 +13,7 @@
 <div class="row">
   <div class="large-12 columns">
 
-    <p>Below is a list of E-Announcements you have access to edit. These are sorted by the first date entered.
+    <p>Below is the list of E-Announcements you have access to edit. These are sorted by the first date entered, newest dates first.
     </p>
   </div>
  </div>
