Added e-announcement image

--- a/tinker/templates/about-page.html
+++ b/tinker/templates/about-page.html
@@ -53,6 +53,14 @@
             Person designed by <a href="http://www.thenounproject.com/visionsbuero">johanna</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
         </div>
     </div>
+    <div class="row">
+        <div class="large-6 columns">
+            <p>Mail</p>
+        </div>
+        <div class="large-6 columns">
+            Mail designed by <a href="http://www.thenounproject.com/libberry">libberry</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
+        </div>
+    </div>
 
     <small>Logged in as: {{ session['username'] }}</small>
 {% endblock %}
