--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -53,13 +53,12 @@
       </div>
     {% endif %}
 
-            {#
-            <a class="home-button button" href="/wufoo">Wufoo Forms</a>
-            #}
 
-            {#
-            <a class="home-button button">Other Forms</a>
-            #}
+      <div class="row">
+        <div class="large-6 columns">
+          <a href="/e-announcement" class="button expand"><img src="get-image/e-announcement.png" class="button-image" /><br />Manage E-Announcements</a>
+        </div>
+
 
 
           </div>
