add base table and make page

--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -43,7 +43,7 @@
             <ul id="drop" class="large f-dropdown" data-dropdown-content>
               <li><a href="/publish-manager" class="button-nav">Publisher</a></li>
               <li><a href="/sync" class="button-nav">Sync Metadata</a></li>
-              <li><a href="#">Blink Layout Owners (not created yet)</a></li>
+              <li><a href="/admin/blink-roles">Blink Layout Owners</a></li>
             </ul></li>
         {% endif %}
   </ul>
