--- a/tinker/roles/templates/blink-roles-home.html
+++ b/tinker/roles/templates/blink-roles-home.html
@@ -5,6 +5,13 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 {% block main_content %}
 
+    <table>
+        {% for row in table %}
+        <tr>
+
+        </tr>
+    </table>
+
     <table class="silvatable grid" cellspacing="0" cellpadding="3">
         <colgroup>
             <col width="33%" class="align-left">
