--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -22,6 +22,13 @@
              {% endif %}
          {% endif %}
 
+
+         {% if '/e-announcement/' in request.path %}
+           <li><a href="/e-announcement" class="button button-nav active">E-Announcements</a></li>
+         {% else %}
+             <li><a href="/e-announcement" class="button button-nav">E-Announcements</a></li>
+         {% endif %}
+
           {#
              {% if request.path == '/wufoo/' %}
                <li><a href="/wufoo" class="button button-nav active">Wufoo</a></li>
