limit e-announcements to admins

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -162,6 +162,11 @@
                     if( dateCutoff <= new Date() ){
                         return date;
                     }
+
+                    // Todo: remove this once we launch.
+                    if( new Date() == new Date() ){
+                        return date;
+                    }
                 }
               });
             });
