--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -63,6 +63,38 @@
           {% if field.type == "SelectMultipleField" %}
             {{ field(size=10, class="largeselect") }}
 
+          {% elif field.type == "MultiCheckboxField" %}
+              <div class="row">
+
+
+                <div class="large-4 columns">
+                  <div>Student</div>
+                    {% for item in field %}
+                        {% if loop.index <= 8 %}
+                            {{ item }} <label>{{ banner_roles_mapping[loop.index] }}</label><br />
+                        {% endif %}
+                    {% endfor %}
+                  </div>
+
+                  <div class="large-4 columns">
+                    <div>Faculty</div>
+                    {% for item in field %}
+                        {% if 9 <= loop.index and loop.index <= 13 %}
+                            {{ item }} <label>{{ banner_roles_mapping[loop.index] }}</label><br />
+                        {% endif %}
+                    {% endfor %}
+                  </div>
+
+                <div class="large-4 columns">
+                    <div>Staff</div>
+                    {% for item in field %}
+                        {% if 14 <= loop.index <= 15 %}
+                            {{ item }} <label>{{ banner_roles_mapping[loop.index] }}</label><br />
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+
           {% elif field.type == "HeadingField" %}
             <h3>{{ field.label }}</h3>
 
