--- a/tinker/e_announcements/templates/e-announcements-home.html
+++ b/tinker/e_announcements/templates/e-announcements-home.html
@@ -17,7 +17,7 @@
     </p>
   </div>
  </div>
-      <a href="/e-announcement/edit/new" class="small button success">Create New E-Announcement</a>
+      <a href="/e-announcement/new" class="small button success">Submit New E-Announcement</a>
 <hr/>
 <div class="row">
 
