updated old form url

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block main_content %}
-    <p style="background-color:tomato; padding:15px">Note: For announcements prior to April 1, 2016, go to the old E-Announcement <a>submission page</a>.</p>
+    <p style="background-color:tomato; padding:15px">Note: For announcements prior to April 1, 2016, go to the old E-Announcement <a href="https://bethelnet.bethel.edu/e-announcements/add-ann/">submission page</a>.</p>
   <div class="row">
   <div class="large-12 columns">
     {% if new_form %}
