updated e-announcement text

--- a/tinker/e_announcements/templates/e-announcements-home.html
+++ b/tinker/e_announcements/templates/e-announcements-home.html
@@ -19,6 +19,8 @@
  </div>
       <a href="/e-announcement/new" class="small button success">Submit New E-Announcement</a>
 <hr/>
+
+    <p style="background-color:tomato; padding:15px">Note: Announcements submitted with the old submission page will automatically be moved here during the week of March 21st.</p>
 <div class="row">
 
   <div class="large-12 columns">
