--- a/tinker/e_announcements/templates/e-announcements-home.html
+++ b/tinker/e_announcements/templates/e-announcements-home.html
@@ -42,12 +42,12 @@
         </div>
         <div class="large-6 columns small-3">
           <ul class="button-group">
-            {% if form.path != '' %}
-              <li><a href="/e-announcement/edit/{{ form.id }}" class="small button">Edit</a></li>
+            {% if form.workflow_status %}
+              <li>This announcement is pending approval.</li>
             {% else %}
-              <li><a class="small button success">Not Approved</a></li>
+              <li><a href="/e-announcement/edit/{{ form.id }}" class="small button">Edit</a></li>
+              <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-e-announcement-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
             {% endif %}
-            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-e-announcement-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
            </ul>
         </div>
         <hr/>
