--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -37,21 +37,22 @@
              {% endif %}
           #}
 
-          {% if 'Tinker Redirects' in session['groups'] %}
-             {% if request.path == '/redirect/' %}
-               <li><a href="/redirect" class="button button-nav active">Redirects</a></li>
-             {% else %}
-                 <li><a href="/redirect" class="button button-nav">Redirects</a></li>
-             {% endif %}
-          {% endif %}
+{#          {% if 'Tinker Redirects' in session['groups'] %}#}
+{#             {% if request.path == '/redirect/' %}#}
+{#               <li><a href="/redirect" class="button button-nav active">Redirects</a></li>#}
+{#             {% else %}#}
+{#                 <li><a href="/redirect" class="button button-nav">Redirects</a></li>#}
+{#             {% endif %}#}
+{#          {% endif %}#}
 
         {% if 'Administrators' in session['groups'] %}
             <li><a href="#" class="button button-nav" data-dropdown="drop">Admin Menu &raquo;</a>
             <ul id="drop" class="large f-dropdown" data-dropdown-content>
               <li><a href="/admin/publish-manager" class="button-nav">Publisher</a></li>
               <li><a href="/admin/sync" class="button-nav">Sync Metadata</a></li>
-              <li><a href="/admin/blink-roles">Blink Layout Owners</a></li>
-              <li><a href="/admin/cache-clear">Clear Cache</a></li>
+              <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>
+              <li><a href="/admin/cache-clear" class="button-nav">Clear Cache</a></li>
+              <li><a href="/admin/redirect" class="button-nav">Redirects</a></li>
             </ul></li>
         {% endif %}
   </ul>
