update nav links, add 'admin' prefix to publish links

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -44,7 +44,7 @@
     {% if 'Redirects' in session['groups'] %}
       <div class="row">
         <div class="large-6 columns">
-          <a href="/redirect" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>
+          <a href="/admin/redirect" class="button expand"><img src="get-image/redirect-icon.png" class="button-image" /><br />Manage Redirects</a>
         </div>
 
         <div class="large-6 columns">
