update template urls for sync and redirects

--- a/tinker/admin/sync/templates/sync-home.html
+++ b/tinker/admin/sync/templates/sync-home.html
@@ -5,6 +5,6 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<a href="/sync/all" class="small button success">Sync</a>
+<a href="/admin/sync/all" class="small button success">Sync</a>
 
 {% endblock %}
