removed headers from WYSIWYGS and removed space from e-annz email title

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -95,7 +95,7 @@
       <script type="text/javascript">
   $( document ).ready(function() {
       if (typeof(CKEDITOR) != "undefined"){
-        CKEDITOR.config.format_tags = 'h2;h3;h4';
+        CKEDITOR.config.format_tags = 'p';
         CKEDITOR.config.disableNativeSpellChecker = false;
         CKEDITOR.config.removePlugins = 'indent,indentlist,indentblock';
       }
