--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -14,7 +14,7 @@
              <li><a href="/event" class="button button-nav">Events</a></li>
          {% endif %}
 
-         {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
+         {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
              {% if '/faculty-bio' in request.path %}
                <li><a href="/faculty-bio" class="button button-nav active">Faculty Bios</a></li>
              {% else %}
@@ -36,14 +36,6 @@
                  <li><a href="/wufoo" class="button button-nav">Wufoo</a></li>
              {% endif %}
           #}
-
-{#          {% if 'Tinker Redirects' in session['groups'] %}#}
-{#             {% if request.path == '/redirect/' %}#}
-{#               <li><a href="/redirect" class="button button-nav active">Redirects</a></li>#}
-{#             {% else %}#}
-{#                 <li><a href="/redirect" class="button button-nav">Redirects</a></li>#}
-{#             {% endif %}#}
-{#          {% endif %}#}
 
         {% if 'Administrators' in session['groups'] or 'Tinker Redirects' in session['groups']%}
             <li><a href="#" class="button button-nav" data-dropdown="drop">Admin Menu &raquo;</a>
